update slides with typos and images

--- a/README.Rmd
+++ b/README.Rmd
@@ -7,4 +7,4 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Slides available at 
+Slides available at https://user2021-rladies-melbourne.netlify.app/#1
